syntax = "proto3";

package services;

option go_package = "/services;services";

service User {
  rpc GetProfileUser (GetProfileUserRequest) returns (GetProfileUserResponse);
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc InactiveUser (InactiveUserRequest) returns (InactiveUserResponse);
}

message UserModels {
  string id = 1 [json_name="id"];
  string username = 2 [json_name="username"];
  string email = 3 [json_name="email"];
  string  address = 4 [json_name = "address"];
  string phone_number = 5 [json_name="phone_number"];
  string password = 6 [json_name="password"];
 string display_name = 7 [json_name="display_name"];

//  string google.protobuf.StringValue DisplayName = 5 [json_name=""]
}
message GetProfileUserRequest {
  string name = 1 [json_name="name"];
}

message GetProfileUserResponse {
  UserModels user = 1 [json_name="user"];
  ResponseStatus status = 2 [json_name="status"];
}

message RegisterUserRequest {
  UserModels user = 1;
}

message RegisterUserResponse {
  string id  = 1; 
  ResponseStatus status = 2;
}

message UpdateUserRequest {
  string username = 1 [json_name="username"];
  optional string display_name = 2 [json_name="display_name"];
 optional string address =3 [json_name="address"];
 optional string password = 4 [json_name="password"];
}
message UpdateUserResponse {
  UserModels user = 1 [json_name="user"];
  ResponseStatus status = 2 [json_name="status"];
}

message InactiveUserRequest {}
message InactiveUserResponse {}

message ResponseStatus {
  string message = 1 [json_name="message"];
  int32 code = 2 [json_name="code"];
}
